--- a/projects/adventure.html
+++ b/projects/adventure.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects</title>
+  <title>Joel Butler - Adventures</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Projects">
+  <meta name="description" content="Adventures">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body class="projects">    
+<body class="adventure">    
   <header>
    <nav class="navigation">
       <ul>
@@ -39,7 +39,7 @@
         <li class="technical"><a  href="projects/technical">Technical</a></li>
         <hr></ul>
         </nav>
-        <h1>Origami Koi</h1>
+        <h1Adventures</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
 		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
