--- a/projects/adventure.html
+++ b/projects/adventure.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-      <h1> Projects</h1>
+      <h1> Adventures</h1>
         <nav class="projectsbar">
         <ul>
           <hr>
