--- a/projects/adventure.html
+++ b/projects/adventure.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Adventures">
   <meta name="author" content="Joel Butler">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css/..">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
