--- a/skills/arduino.html
+++ b/skills/arduino.html
@@ -31,25 +31,21 @@
       <div class="content">
 	      <h1>Arduino</h1>
         <hr><br>
-        <h3> HTML, CSS and JavaScript are all a large work in progress for me, however I have been thoroughly enjoying learning another new skill. Especially one I believe will be invaluable to me in the future. 
+        <h3>I have been interested in building a computer numeric control (CNC) machine, or 3D printer for some time now. But, because I didn’t want to spend a ton of money, I thought I would keep it simple and make a CNC etch-a-sketch. It’s basically a crappy 2D CNC machine and though this has been done before, I thought it was a neat project and wanted to have a go at it myself. The main goals for this project were to learn about G-Code and CNC machines with the idea that I can transfer these skills to more complex situations in the future.
 
-This website is really the only experience with HTML I have. I started from the ground up basically starting with a simple background image with some overlaid text. From there, I added a fixed top navigation bar which is responsive based on what page is selected. 
+The electrical components for this project included: Arduino UNO, GRBL shield, 2 stepper motor drivers, 2 stepper motors, and a power supply. Really not much to it! Not much of any Arduino coding was required, as all I had to do was load an open source GRBL communicating program onto the Arduino microcontroller. This GRBL program sends G-Code instructions to the stepper motors via a clean interface. So, once I had this working, really all I needed was a mechanical connection to the etch-a-sketch, and some G-Code. 
 
-A website footer was finished next. Lucky, I do have some experience in C++, C, and Arduino programming which has really helped me understand existing code and create new HTML code quickly. I bought an HTML book and used many online resources to find ideas and learn.
+I wanted to keep the mechanical component as simple as possible so I built a small wooden frame. The etch-a-sketch is held in place by a plywood box and the two stepper motors are positioned concentrically over the turn knobs. The stepper motor shafts are connected to the knobs with two small motor couplings and a couple of tapped screws. 
 
-From here, I began building individual pages from the visions I had on paper. I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it. I used free graphic design software called InkScape to create a vector image. This allowed me to create a white background with see through letters. I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project. 
+At this point, I punched some G-Code into the GRBL interpreter and off it went! This was pretty exciting. Though this project doesn’t sound very complex, there was many small obstacles I had to overcome to get to this point so needless to say, I was thrilled.
 
-I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.
+So great. I can draw lines and boxes. But how the heck was I going to get a complex image to print on my etch-a-sketch? I looked up various G-Code softwars and thought the best would be to keep it simple. I stumbled upon InkScape which is an open source graphic design software. This is an extremely powerful tool that can be used to create very complex vector images. Furthermore, someone with very good programming skills created a G-Code plugin which creates a G-Code tool path based on the vector image path. 
 
-For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.
+Stencils worked best for this project so I chose some basic black and white images from the internet. The image is traced and you are left with a simple outline of the design. Using the InkScape tools, some G-Code can be generated and then its ready to print. The G-Code is modified for the Arduino and sent to the stepper motors.
 
-By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. 
+This is the crappiest printer I have ever seen. It’s slow, loud, and inaccurate. But, it was so funny to see it rip away on the etch-a-sketch. The knobs and design of the etch-a-sketch create some backlash issues reducing the quality, but it’s very cool none the less. 
 
-I learned how to create a form for collecting visitor information. The problem with this is, that for the form to work correctly, it needs to have some PHP code which will send an email directly from the form. I don’t know the first thing about PHP! 
-
-Finally, before I’m satisfied, I also would like to have a simple format for organizing and creating new project pages. This way, each time I make a new post, I can sort that quickly into my website without writing a ton of code. 
-
-Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
+The limitations seem to be the way the tool path is selected. I’m sure if I dumped a lot of time into creating a single line vector, that I could produce some amazing results, however for now, I will be satisfied with the odd line cutting directly through the print.  In the future, I plan to use what I have learned with this project to build a more complex, more precise, 3D CNC milling machine.
 </h3>
         <br><br>
        </div>
