--- a/skills/woodwork.html
+++ b/skills/woodwork.html
@@ -31,28 +31,12 @@
       <div class="content">
 	      <h1>Woodwork</h1>
         <hr><br>
-        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of 3d space. Drawing in solidworks is almost like playing a video game. </h3>
-<h3><ul>
-  <li>Precicely follow drafting design principles</li>
-<li>Create mechanical components, schematics, angle and orthographic views</li>
-<li>Produce detailed designs, and drawings using technical product specifications</li>
-<li>Build detailed renderings, illustrations, and motion simulations</li>
-<li>Construct drawings and designs from hand sketches</li>
-  </ul>
-  <h2>FUEL TANK</h2>
-<h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="/images/fueltank.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/fueltank.jpg" alt="Solidworks Fuel Tank" width="160" height="160"></a><br>
-<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
+        <h3>DESK
+I wanted a personal work station where I could study, do homework, surf the internet, play xbox, and house my electronics, but, I couldn’t find anything I really liked in any stores. So, I opted to build my own. I sketched up a tall and long desk on paper and started cutting some Birch plywood and maple. It’s a fairly simple design but has removable adjustable shelves, an open back for ventilation, and a ton of additional support. Birch plywood and 2 x 3 inch maple were the two materials used. Basically, the plywood was used for the top, sides, shelves and inner support, and the maple was used for the corners, edges and feet. I used a table saw, miter saw, nail gun, and planer to work on this project. Finally, I stained and sealed the desk so that it would stand up to some abuse. It took quite a while to put this together but I have always been very happy with the results.
 
-  <h2>MOTORS</h2>
-<h3>Calipers were used to physically measure small components for modeling exercise. Motion simulation, rendering and meshing of gears were practiced in this project.</h3>
-   <a href="/images/doublegear.jpg"><img style="float:left; margin: 20px 20px 20px 20px;" src="/images/doublegear.jpg" alt="Solidworks Double Gear Motor" width="160" height="160"></a>
-<h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
-   <a href="/images/miser.jpg"><img style="float:right; margin: 20px 20px 20px 20px;" src="/images/miser.jpg" alt="Solidworks Miser Sterling Engine" width="160" height="160"></a><br>
-<h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
-<h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
-<br><hr><br>
-      <h3><center>Resume available upon request</h3>
+WOODEN CLOCK
+I have had an interest in watches for quite some time. I bought my first in 2006 and still wear it frequently. My collection has now grown to 10 unique watches. I also think that mechanical clocks are really neat. This is where this project started for me. I’m not sure how I found it, but I found a mechanical engineer who makes wooden mechanical clocks. All of the inner components are made of wood. They are really cool pieces of art that take a lot of patience, and precision to build. Everything will link together for me on this as eventually, I would like to design and build my own wooden clocks. The goal is to use a CNC machine to precisely cut components from wood but for now, I purchased a cheap scroll saw from craigslist and started cutting out gears by hand. It’s a very tedious process, but also very relaxing. I always enjoyed arts and crafts. Hopefully when I’m done, this clock will tick away loudly. There are some incredibly intricate wooden mechanical designs that even strike on the hour.
+</h3>
         <br><br>
        </div>
     </div>
