--- a/skills/solidworks.html
+++ b/skills/solidworks.html
@@ -41,21 +41,21 @@
   </ul>
   <h2>FUEL TANK</h2>
 <h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="www.joel-butler.com/images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
+  <a href="../images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
 <h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
 
   <h2>MOTORS</h2>
 <h3>Both calipers, and detail drawings, were used as references for components as modeling exercise. Motion simulation, rendering and meshing of gears were practiced in both of these projects.</h3>
-   <a href="www.joel-butler.com/images/doublegear.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegear.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
+   <a href="../images/doublegear.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegear.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
-   <a href="www.joel-butler.com/images/doublegearexploded.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegearexploded.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
+   <a href="../images/doublegearexploded.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegearexploded.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
 <h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
-   <a href="/images/miser.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/miser.JPG" alt="Solidworks Miser Sterling Engine" width="80%" height="auto"></a><br>
+   <a href="../images/miser.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/miser.JPG" alt="Solidworks Miser Sterling Engine" width="80%" height="auto"></a><br>
 <h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
   <br>
-   <a href="www.joel-butler.com/images/horizontalsterling.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/horizontalsterling.JPG" alt="Solidworks Double Gear Motor" width="70%" height="auto"></a>
+   <a href="../images/horizontalsterling.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/horizontalsterling.JPG" alt="Solidworks Double Gear Motor" width="70%" height="auto"></a>
   <br>
 <h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
 <br><hr><br>
